
=over

=item *

Added support for the JS-Quicktags WYSIWYG editor. [Greg Heo]

=item *

API doc corrections reported by Rod Taylor. [Scott]

=item *

Added the C<active_sites> parameter to C<< Bric::Biz::Category->list >>.
[David]

=item *

Categories associated with inactive sites are no longer displayed in the
category manager. Suggested by Jesper Andersen (Bug # 1286). [David]

=back

=head2 Bug Fixes

=over

=item *

Patch for codeselect. [Greg Heo]

=item *

Eliminated the display of the login screen in the side nav when C<NO_TOOLBAR>
is set to false and a session expires. Reported by Matt Rolf (Bug #921).
[David]

=item *

Worked around a bug in SOAP::Lite that only appears when used in conjunction with
LWP 5.810 and later. [David]

=item *

Fixed issue in F<db_grant.pl>, which was trying to grant permissions to a row
count. [Paul Orrock]

=item *

Fixed a bug when publishing or previewing a story with related media where an
error could occur when a media document was published to more than one output
channel with different URIs. Reported by Matt Wlazlo. [David]

=item *

Fixed an issue when a user with publish permission selects "Check in and
Publish" for a newly created document. Reported by Chris Heiland and Matt Rolf
(RT #1261). [David]

=item *

When creating a new media document from a related media element, if the user
clicks "Save" or "Save and Stay" instead of "Create", it will properly create
the related media document. [David]

=item *

When creating creating a new media document by uploading a file in a related
media element, clicking "Save", "Cancel", or "Check in" on the media profile
page now properly redirects back to the related media element profile. [David]

=item *

A template deployed via SOAP now has its C<published_version> attribute
properly set. Reported by Brad Harder (Bug #1288). [David]

=back

=head1 VERSION 1.10.4 (2008-03-09)

=head2 Improvements

=over

=item *
