@@ -17,9 +17,9 @@
 <dt><% $lang->maketext('Last Published') %>:</dt>
 <dd><% $story->get_publish_date || '&nbsp;' %></dd>
 <dt><% $lang->maketext('URI') %>:</dt>
-% if ($is_related_story) {
-<dd><% $prim_uri %></dd>
-% } else {
+%# if ($is_related_story) {
+%# <dd><% $prim_uri %></dd>
+%# } else {
 %     if (@ocs == 1) {
 <dd><% $m->comp('/widgets/profile/preview_link.mc',
                 type  => 'story',
@@ -31,7 +31,7 @@
 <dt><% $lang->maketext('Preview in') %>:</dt>
 <dd><% $oc_select %>&nbsp;<a href="#" onClick="window.open('/workflow/profile/preview/story/<% $id %>/' + window.document.theForm.ocSelect.options[window.document.theForm.ocSelect.selectedIndex].value, 'preview_<% SERVER_WINDOW_NAME %>');return false;"><img src="/media/images/<% $lang_key %>/preview_lgreen.gif" alt="Preview" border="0" width="74" height="20"></a></dd>
 %     }
-% }
+%# }
 </dl>
 
 % if ($frame) {
@@ -53,7 +53,7 @@ $header ||= 'Story Information';
 
 # see whether we're at the top of the page or not;
 # otherwise, we won't show the "Preview in" line
-my $is_related_story = $number != 1;
+# my $is_related_story = $number != 1;
 
 my $id = $story->get_id();
 my $prim_uri = $story->get_primary_uri();
